text alignment issues fixed

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -60,6 +60,13 @@ h2 {
     margin-left: auto;
     margin-right: auto;
 	width: 800px;
+
+	.description {
+		width: 661px;
+    	margin-left: auto;
+    	margin-right: auto;
+	}
+
 	.form-row {
 		padding: 20px;
 		margin-top: 15px;
